--- a/client/src/components/Sidebar.css
+++ b/client/src/components/Sidebar.css
@@ -12,7 +12,7 @@ main{
 }
 .sidebar{
     background: rgb(0, 73, 67);
-    color: #ffffffa9;
+    color: #ffffff;
     height:96vh;
    
   margin: 0%;
