--- a/client/src/components/Sidebar.css
+++ b/client/src/components/Sidebar.css
@@ -11,7 +11,7 @@ main{
     padding: 20px;
 }
 .sidebar{
-    background: rgb(0, 73, 67);
+    background: #004943;
     color: #ffffff;
     height:96vh;
    
